# ai-agent

./: .pre-commit-config.yaml  README.md  docker-compose.prod.yaml  docker-compose.yaml  main.py
backend/: .gitignore  Dockerfile  Dockerfile.prod  README.md  pyproject.toml
backend/app/: db.py  depends.py  llm.py  main.py  models.py  prompts.py  schemas.py  state.py  utils.py  vector_store.py
backend/app/ai/: agent_supervisor.py  llm.py  llm_service.py  utils.py
backend/app/ai/prompts/: persona.py  templates.py  utils.py
backend/app/api/: embedding.py  generate.py  retrieve.py  route.py  sockets.py
backend/app/api/v1/: depends.py  drinks.py  generate.py  retrieve.py  route.py
backend/app/application/ai/: llm.py
backend/app/application/repositories/: drink_repository.py  ingredient_repository.py
backend/app/application/services/: faiss_manager.py  ingredient_vocab.py
backend/app/configs/: settings.py
backend/app/controllers/: route.py  sockets.py
backend/app/controllers/v1/: drinks.py  generate.py  retrieve.py  route.py
backend/app/infrastructure/: faiss_manager.py  ingredient_vocab.py
backend/app/repositories/: drink_photo_repository.py  drink_repository.py  ingredient_repository.py  user_preference_repository.py
backend/app/script/: vector_store.py
backend/app/services/: chat_history_service.py  drink_retrieve_service.py  drink_service.py  ingredient_vocab.py
backend/lib/: t-sne-visualization.py
backend/nginx/: nginx.conf
backend/script/: seed-user-preferences.py  t-sne-visualization.py
backend/test/: result.md
frontend/: Dockerfile  (+4 more)
(+20 files in other folders)
